--- a/style/style.css
+++ b/style/style.css
@@ -48,7 +48,7 @@ body {
 
 .top-left-column {
     float: left;
-    width: 800px;
+    width: 880px;
 }
 
 .index-title {
@@ -77,9 +77,7 @@ body {
 .index-menu li a {
     position: relative;
     display: inline-block;
-    padding: 5px 33px 15px 33px;
-    font-size: 1.5625em;
-    /*25px*/
+    padding: 5px 20px 15px 20px;
     color: #fff;
     text-decoration: none;
     vertical-align: middle;
@@ -95,7 +93,7 @@ body {
 
 .index-menu li a:after {
     position: absolute;
-    top: 5px;
+    top: 8px;
     right: 0;
     width: 2px;
     height: 37px;
@@ -103,9 +101,11 @@ body {
     background-color: #fff;
 }
 
+.index-menu li:nth-child(1) a:after,
 .index-menu li:nth-child(2) a:after,
-.index-menu li:nth-child(3) a:after {
-    top: 21px;
+.index-menu li:nth-child(6) a:after,
+.index-menu li:nth-child(7) a:after {
+    top: -2px;
 }
 
 .index-menu li:last-child a:after {
@@ -390,6 +390,29 @@ body {
     background-color: #fff;
 }
 
+.social-btn {
+    float: left;
+    width: 220px;
+    margin-left: 55px;
+}
+
+.vk,
+.fb,
+.instagram {
+    display: inline-block;
+    margin-right: 20px;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    vertical-align: top;
+}
+
+.vk:hover,
+.fb:hover,
+.instagram:hover {
+    box-shadow: 0 0 60px #fff;
+}
+
 .container-inner {
     width: 1311px;
     margin: 0 auto;
@@ -402,10 +425,16 @@ body {
     color: #593f1f;
 }
 
+.top-right-link {
+    float: right;
+    width: 400px;
+    height: 200px;
+}
+
 .contact {
     float: left;
     width: 1261px;
-    margin-top: 50px;
+/*    margin-top: 50px;*/
 }
 
 .contact-title {
@@ -500,9 +529,18 @@ body {
     background-color: #ccc;
 }
 
+.photo2 {
+    background: url(../img/photo2.jpg) 50% 0 no-repeat;
+}
+
 .contact .copyright-text {
     display: block;
     margin-bottom: 30px;
     text-align: center;
     color: #fff;
+}
+
+.contact .social-btn {
+    float: none;
+    margin: 0 auto 30px auto;
 }
