--- a/style/style.css
+++ b/style/style.css
@@ -1163,3 +1163,20 @@ hr {
     width: 415px;
     margin: 0 auto 50px auto;
 }
+
+
+/*------------------*/
+
+
+/*--- press.html ---*/
+
+.press-date {
+    display: block;
+    text-align: center;
+    font-weight: bold;
+}
+
+iframe {
+    display: block;
+    margin: 50px auto;
+}
