--- a/style/style.css
+++ b/style/style.css
@@ -819,6 +819,21 @@ p {
     /*25px*/
 }
 
+.actions-main-link {
+    display: block;
+    margin: 20px 0;
+    font-size: 1.25em;
+    /*20px*/
+    color: #492e0c;
+    text-align: left;
+    text-decoration: none;
+}
+
+.actions-main-link:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
 .actions-item img {
     float: left;
     width: 100px;
@@ -930,6 +945,60 @@ p {
     height: 350px;
     margin-bottom: 50px;
     background: #ccc url(../img/logo-partners.jpg) 0 0 no-repeat;
+}
+
+
+/*------------------*/
+
+
+/*--- cristmas-miracle.html ---*/
+
+.decor {
+    display: inline-block;
+    width: 250px;
+    height: 268px;
+    background: url(../img/decoration.png) top left no-repeat;
+}
+
+.decor-left {
+    background-position: top right;
+}
+
+.decor-left-bottom {
+    background-position: bottom left;
+}
+
+.decor-right-bottom {
+    background-position: bottom right;
+}
+
+.decor-text {
+    display: inline-block;
+    width: 690px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 30px;
+    vertical-align: top;
+    text-align: center;
+}
+
+.decor-content {
+    width: 900px;
+    margin: -80px auto 0 auto;
+}
+
+.decor-content p {
+    font-size: 18px;
+}
+
+.decor-text p {
+    font-size: 20px;
+    text-align: center;
+}
+
+.decor-divider {
+    width: 100%;
+    height: 100px;
 }
 
 
